override the default e2path variable so github page goes to www.army.mil, and add repo js files (not ignored)

--- a/e2/css/rv7/armydotmil/style.scss
+++ b/e2/css/rv7/armydotmil/style.scss
@@ -5,4 +5,8 @@
 // ----------------------------------------------------------------------
 // The whole shebang!
 // ----------------------------------------------------------------------
+
+// override default variable specifically for the armydotmil.github.io page:
+$e2path: 'https://www.army.mil/e2';
+
 @import "all";
