update most of the grapics from SVG sprite to icon font

--- a/_includes/elements/announcements.html
+++ b/_includes/elements/announcements.html
@@ -68,7 +68,7 @@
                     </li>
                 </ul>
                 <div class="view-all">
-                    <a href="https://www.army.mil/news/newsreleases">VIEW ALL ANNOUNCEMENTS</a>
+                    <a href="https://www.army.mil/news/newsreleases">VIEW ALL ANNOUNCEMENTS<span class="view-more-arrow-sm"></span></a>
                 </div>
             </div>
         </div>
