--- a/_includes/elements/news.html
+++ b/_includes/elements/news.html
@@ -58,6 +58,6 @@
         </li>
     </ul>
     <div class="view-all">
-        <a href="https://www.army.mil/news/">VIEW ALL NEWS</a>
+        <a href="https://www.army.mil/news/">VIEW ALL NEWS<span class="view-more-arrow-sm"></span></a>
     </div>
 </div>
