--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -70,24 +70,24 @@
                   </li>
                   <li class="social">
                     <ul>
-                      <li class="social-button facebook-button">
-                        <a rel="noopener noreferrer" target="_blank" href="https://www.facebook.com/USArmy"><span>Official U.S. Army Facebook</span></a>
+                      <li class="social-button">
+                        <a rel="noopener noreferrer" target="_blank" href="https://www.facebook.com/USArmy" title="Official U.S. Army Facebook"><i class="armyicons-sm_facebook"></i></a>
                       </li>
-                      <li class="social-button twitter-button">
-                        <a rel="noopener noreferrer" target="_blank" href="https://twitter.com/USArmy"><span>Official U.S. Army Twitter</span></a>
+                      <li class="social-button">
+                        <a rel="noopener noreferrer" target="_blank" href="https://twitter.com/USArmy" title="Official U.S. Army Twitter"><i class="armyicons-sm_x"></i></a>
                       </li>
-                      <li class="social-button youtube-button">
-                        <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/USarmy"><span>Official U.S. Army Youtube</span></a>
+                      <li class="social-button">
+                        <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/USarmy" title="Official U.S. Army Youtube"><i class="armyicons-sm_youtube"></i></a>
                       </li>
-                      <li class="social-button instagram-button">
-                        <a rel="noopener noreferrer" target="_blank" href="https://www.instagram.com/usarmy/"><span>Official U.S. Army Instagram</span></a>
+                      <li class="social-button">
+                        <a rel="noopener noreferrer" target="_blank" href="https://www.instagram.com/usarmy/" title="Official U.S. Army Instagram"><i class="armyicons-sm_instagram"></i></a>
                       </li>
-                      <li class="social-button flickr-button">
-                        <a rel="noopener noreferrer" target="_blank" href="https://www.flickr.com/photos/soldiersmediacenter"><span>Official U.S. Army Flickr</span></a>
+                      <li class="social-button">
+                        <a rel="noopener noreferrer" target="_blank" href="https://www.flickr.com/photos/soldiersmediacenter" title="Official U.S. Army Flickr"><i class="armyicons-sm_flickr3"></i></a>
                       </li>
-                      <li class="social-button linkedin-button">
-                        <a rel="noopener noreferrer" target="_blank" href="https://www.linkedin.com/company/us-army"><span>Official U.S. Army LinkedIn</span></a>
-                      </li>  
+                      <li class="social-button">
+                        <a rel="noopener noreferrer" target="_blank" href="https://www.linkedin.com/company/us-army" title="Official U.S. Army Linkedin"><i class="armyicons-sm_linkedin2"></i></a>
+                      </li>
                     </ul>
                   </li>
               </ul>
@@ -112,7 +112,9 @@
                 </div>
                 <label for="usagov-search-query">Search news, photos and videos on Army.mil</label>
                 <input autocomplete="off" placeholder="Search" class="usagov-search-autocomplete" id="usagov-search-query" name="query" type="text" />
-                <input aria-label="Search" name="commit" type="submit" value="" class="search-submit-button" />
+                <button aria-label="Search" name="commit" type="submit" value="" class="search-submit-button">
+                  <i class="armyicons-search"></i>
+                </button>
             </form>
         </div>
     </div>
