--- a/_includes/elements/social-media.html
+++ b/_includes/elements/social-media.html
@@ -1,46 +1,46 @@
 <ul class="social">
   <!-- Regular White Buttons -->
-  <li class="social-button facebook-button"><a href="#" title="Official U.S. Army Facebook"><span>Official U.S. Army Facebook</span></a></li>
-  <li class="social-button twitter-button"><a href="#" title="Official U.S. Army Twitter"><span>Official U.S. Army Twitter</span></a></li>
-  <li class="social-button googleplus-button"><a href="#" title="Official U.S. Army Google+"><span>Official U.S. Army Google+</span></a></li>
-  <li class="social-button pinterest-button"><a href="#" title="Official U.S. Army Pinterest"><span>Official U.S. Army Pinterest</span></a></li>
-  <li class="social-button flickr-button"><a href="#" title="Official U.S. Army Flickr"><span>Official U.S. Army Flickr</span></a></li>
-  <li class="social-button slideshare-button"><a href="#" title="Official U.S. Army Slideshare"><span>Official U.S. Army Slideshare</span></a></li>
-  <li class="social-button youtube-button"><a href="#" title="Official U.S. Army Youtube"><span>Official U.S. Army Youtube</span></a></li>
-  <li class="social-button instagram-button"><a href="#" title="Official U.S. Army Instagram"><span>Official U.S. Army Instagram</span></a></li>
-  <li class="social-button vimeo-button"><a href="#" title="Official U.S. Army Vimeo"><span>Official U.S. Army Vimeo</span></a></li>
-  <li class="social-button linkedin-button"><a href="#" title="Official U.S. Army Linkedin"><span>Official U.S. Army Linkedin</span></a></li>
-  <li class="social-button armylive-button"><a href="#" title="Official U.S. Army Army Live Blog"><span>Official U.S. Army Army Live Blog</span></a></li>
-  <li class="social-button snapchat-button"><a href="#" title="Official U.S. Army Snapchat"><span>Official U.S. Army Snapchat</span></a></li>
-  <li class="social-button email-button"><a href="#" title="Official U.S. Army Email"><span>Official U.S. Army Email</span></a></li>
-  <li class="social-button reddit-button"><a href="#" title="Official U.S. Army Reddit"><span>Official U.S. Army Reddit</span></a></li>
-  <li class="social-button ustream-button"><a href="#" title="Official U.S. Army USTREAM"><span>Official U.S. Army USTREAM</span></a></li>
-  <li class="social-button smugmug-button"><a href="#" title="Official U.S. Army SmugMug"><span>Official U.S. Army SmugMug</span></a></li>
-  <li class="social-button issuu-button"><a href="#" title="Official U.S. Army issuu"><span>Official U.S. Army issuu</span></a></li>
-  <li class="social-button periscope-button"><a href="#" title="Official U.S. Army Google Maps"><span>Official U.S. Army Google Maps</span></a></li>
-  <li class="social-button blogger-button"><a href="#" title="Official U.S. Army Blogger"><span>Official U.S. Army Blogger</span></a></li>
-  <li class="social-button rss-button"><a href="#" title="Official U.S. Army RSS"><span>Official U.S. Army RSS</span></a></li>
-  <li class="social-button soundcloud-button"><a href="#" title="Official U.S. Army Soundcloud"><span>Official U.S. Army Soundcloud</span></a></li>
+  <li class="social-button"><a href="#" title="Official U.S. Army Facebook"><i class="armyicons-sm_facebook"></i></a></li>
+  <li class="social-button"><a href="#" title="Official U.S. Army Twitter"><i class="armyicons-sm_x"></i></a></li>
+  <li class="social-button"><a href="#" title="Official U.S. Army Pinterest"><i class="armyicons-sm_pinterest"></i></a></li>
+  <li class="social-button"><a href="#" title="Official U.S. Army Flickr"><i class="armyicons-sm_flickr3"></i></a></li>
+  <!-- <li class="social-button"><a href="#" title="Official U.S. Army Slideshare"><i class="armyicons-sm_slideshare"></i></a></li> -->
+  <li class="social-button"><a href="#" title="Official U.S. Army Youtube"><i class="armyicons-sm_youtube"></i></a></li>
+  <li class="social-button"><a href="#" title="Official U.S. Army Instagram"><i class="armyicons-sm_instagram"></i></a></li>
+  <li class="social-button"><a href="#" title="Official U.S. Army Vimeo"><i class="armyicons-sm_vimeo"></i></a></li>
+  <li class="social-button"><a href="#" title="Official U.S. Army Linkedin"><i class="armyicons-sm_linkedin2"></i></a></li>
+  <!-- <li class="social-button"><a href="#" title="Official U.S. Army Army Live Blog"><i class="armyicons-sm_armylive"></i></a></li> -->
+  <!-- <li class="social-button"><a href="#" title="Official U.S. Army Snapchat"><i class="armyicons-sm_snapchat"></i></a></li> -->
+  <li class="social-button"><a href="#" title="Official U.S. Army Email"><i class="armyicons-contact"></i></a></li>
+  <li class="social-button"><a href="#" title="Official U.S. Army Reddit"><i class="armyicons-sm_reddit"></i></a></li>
+  <!-- <li class="social-button"><a href="#" title="Official U.S. Army USTREAM"><i class="armyicons-sm_ustream"></i></a></li> -->
+  <!-- <li class="social-button"><a href="#" title="Official U.S. Army SmugMug"><i class="armyicons-sm_smugmug"></i></a></li> -->
+  <!-- <li class="social-button"><a href="#" title="Official U.S. Army issuu"><i class="armyicons-sm_issuu"></i></a></li> -->
+  <!-- <li class="social-button"><a href="#" title="Official U.S. Army Google Maps"><i class="armyicons-sm_periscope"></i></a></li> -->
+  <!-- <li class="social-button"><a href="#" title="Official U.S. Army Blogger"><i class="armyicons-sm_blogger"></i></a></li> -->
+  <li class="social-button"><a href="#" title="Official U.S. Army RSS"><i class="armyicons-rss"></i></a></li>
+  <!-- <li class="social-button"><a href="#" title="Official U.S. Army Soundcloud"><i class="armyicons-sm_soundcloud"></i></a></li> -->
+</ul>
+<ul class="social">
   <!-- Regular Black Buttons -->
-  <li class="social-button-black facebook-button"><a href="#" title="Official U.S. Army Facebook"><span>Official U.S. Army Facebook</span></a></li>
-  <li class="social-button-black twitter-button"><a href="#" title="Official U.S. Army Twitter"><span>Official U.S. Army Twitter</span></a></li>
-  <li class="social-button-black googleplus-button"><a href="#" title="Official U.S. Army Google+"><span>Official U.S. Army Google+</span></a></li>
-  <li class="social-button-black pinterest-button"><a href="#" title="Official U.S. Army Pinterest"><span>Official U.S. Army Pinterest</span></a></li>
-  <li class="social-button-black flickr-button"><a href="#" title="Official U.S. Army Flickr"><span>Official U.S. Army Flickr</span></a></li>
-  <li class="social-button-black slideshare-button"><a href="#" title="Official U.S. Army Slideshare"><span>Official U.S. Army Slideshare</span></a></li>
-  <li class="social-button-black youtube-button"><a href="#" title="Official U.S. Army Youtube"><span>Official U.S. Army Youtube</span></a></li>
-  <li class="social-button-black instagram-button"><a href="#" title="Official U.S. Army Instagram"><span>Official U.S. Army Instagram</span></a></li>
-  <li class="social-button-black vimeo-button"><a href="#" title="Official U.S. Army Vimeo"><span>Official U.S. Army Vimeo</span></a></li>
-  <li class="social-button-black linkedin-button"><a href="#" title="Official U.S. Army Linkedin"><span>Official U.S. Army Linkedin</span></a></li>
-  <li class="social-button-black armylive-button"><a href="#" title="Official U.S. Army Army Live Blog"><span>Official U.S. Army Army Live Blog</span></a></li>
-  <li class="social-button-black snapchat-button"><a href="#" title="Official U.S. Army Snapchat"><span>Official U.S. Army Snapchat</span></a></li>
-  <li class="social-button-black email-button"><a href="#" title="Official U.S. Army Email"><span>Official U.S. Army Email</span></a></li>
-  <li class="social-button-black reddit-button"><a href="#" title="Official U.S. Army Reddit"><span>Official U.S. Army Reddit</span></a></li>
-  <li class="social-button-black ustream-button"><a href="#" title="Official U.S. Army USTREAM"><span>Official U.S. Army USTREAM</span></a></li>
-  <li class="social-button-black smugmug-button"><a href="#" title="Official U.S. Army SmugMug"><span>Official U.S. Army SmugMug</span></a></li>
-  <li class="social-button-black issuu-button"><a href="#" title="Official U.S. Army issuu"><span>Official U.S. Army issuu</span></a></li>
-  <li class="social-button-black periscope-button"><a href="#" title="Official U.S. Army Google Maps"><span>Official U.S. Army Google Maps</span></a></li>
-  <li class="social-button-black blogger-button"><a href="#" title="Official U.S. Army Blogger"><span>Official U.S. Army Blogger</span></a></li>
-  <li class="social-button-black rss-button"><a href="#" title="Official U.S. Army RSS"><span>Official U.S. Army RSS</span></a></li>
-  <li class="social-button-black soundcloud-button"><a href="#" title="Official U.S. Army Soundcloud"><span>Official U.S. Army Soundcloud</span></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Facebook"><i class="armyicons-sm_facebook"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Twitter"><i class="armyicons-sm_x"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Pinterest"><i class="armyicons-sm_pinterest"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Flickr"><i class="armyicons-sm_flickr3"></i></a></li>
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army Slideshare"><i class="armyicons-sm_slideshare"></i></a></li> -->
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Youtube"><i class="armyicons-sm_youtube"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Instagram"><i class="armyicons-sm_instagram"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Vimeo"><i class="armyicons-sm_vimeo"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Linkedin"><i class="armyicons-sm_linkedin2"></i></a></li>
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army Army Live Blog"><i class="armyicons-sm_armylive"></i></a></li> -->
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army Snapchat"><i class="armyicons-sm_snapchat"></i></a></li> -->
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Email"><i class="armyicons-contact"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Reddit"><i class="armyicons-sm_reddit"></i></a></li>
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army USTREAM"><i class="armyicons-sm_ustream"></i></a></li> -->
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army SmugMug"><i class="armyicons-sm_smugmug"></i></a></li> -->
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army issuu"><i class="armyicons-sm_issuu"></i></a></li> -->
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army Google Maps"><i class="armyicons-sm_periscope"></i></a></li> -->
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army Blogger"><i class="armyicons-sm_blogger"></i></a></li> -->
+  <li class="social-button-black"><a href="#" title="Official U.S. Army RSS"><i class="armyicons-rss"></i></a></li>
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army Soundcloud"><i class="armyicons-sm_soundcloud"></i></a></li> -->
 </ul>
