updated leaders example to properly show the new behavior for smaller screen sizes

--- a/_includes/elements/leaders.html
+++ b/_includes/elements/leaders.html
@@ -1,6 +1,8 @@
 <ul class="leaders">
     <li>
-        <img class="leaders-img" onerror="this.style.display = 'none'" src="https://www.army.mil/e2/c/images/assetUploads/5166/custom.jpg" alt="Maj. Gen. Gary J. Volesky">
+        <aside>
+            <img class="leaders-img" onerror="this.style.display = 'none'" src="https://www.army.mil/e2/c/images/assetUploads/5166/custom.jpg" alt="Maj. Gen. Gary J. Volesky">
+        </aside>
         <span class="leaders-text">
             <span class="leaders-heading">Eagle 6</span>
             <span class="leaders-title">Maj. Gen. Andrew P. Poppas</span>
@@ -8,6 +10,36 @@
         <div class="leaders-bio btn">
             <div>
                 <a href="http://www.campbell.army.mil/SiteAssets/CommandGroup/CG_BIo.pdf">OFFICIAL BIO<span></span><span></span><span></span><span></span><span></span><span></span></a>
+            </div>
+        </div>
+    </li>
+
+    <li>
+        <aside>
+            <img class="leaders-img" onerror="this.style.display = 'none'" src="https://api.army.mil/e2/c/images/2021/04/07/d0ed4986/original.jpg" alt="Maj. Gen. JP McGee">
+        </aside>
+        <span class="leaders-text">
+            <span class="leaders-heading">Eagle 6</span>
+            <span class="leaders-title">Maj. Gen. JP McGee</span>
+        </span>
+        <div class="leaders-bio btn">
+            <div>
+                <a href="https://home.army.mil/campbell/index.php/about/leadership/senior-commander">BIOGRAPHY<span></span><span></span><span></span><span></span><span></span><span></span></a>
+            </div>
+        </div>
+    </li>
+
+    <li>
+        <aside>
+            <img class="leaders-img" onerror="this.style.display = 'none'" src="https://api.army.mil/e2/c/images/2021/05/27/f96a88f9/original.jpg" alt="Command Sgt. Maj. Veronica Knapp">
+        </aside>
+        <span class="leaders-text">
+            <span class="leaders-heading">Eagle 7</span>
+            <span class="leaders-title">Command Sgt. Maj. Veronica Knapp</span>
+        </span>
+        <div class="leaders-bio btn">
+            <div>
+                <a href="https://home.army.mil/campbell/index.php/about/leadership/division-csm" target="">Biography<span></span><span></span><span></span><span></span><span></span><span></span></a>
             </div>
         </div>
     </li>
